[package]
name = "quake"
version = "0.1.0"
edition = "2018"
authors = ["Phodal HUANG <h@phodal.com>"]
description = """
Simple knowledge management tool for geek.
"""
documentation = "https://github.com/phodal/quake"
repository = "https://github.com/phodal/quake"
readme = "README.md"
license = "MIT"
exclude = ["_fixtures/*"]
autoexamples = true
keywords = ["knowledge", "dashboard"]

[dependencies]
quake_core = { path = "quake_core", version = "0.1.0" }
quake_tui = { path = "quake_tui", version = "0.1.0" }

# cli parser
clap = "3.0.0-beta.5"
config = { version = "0.11", features = ["yaml"] }

regex = "1.0"
lazy_static = "1.4.0"

csv = "1.1"

walkdir = "2"

indexmap = { version = "1.7.0", features = ["serde"] }

chrono = "0.4"

# Termnial ui
comfy-table = "5.0.0"

serde_yaml = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# for csv to json
json = "0.12.4"

# Search Engine
#meilisearch-sdk = "0.12.0"
futures = "0.3" # To be able to block on async functions if you are not using an async runtime

# WebServer
figment = { version = "0.10", features = ["toml", "env", "yaml"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

# notify for dir
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.13"

# for testing
async-std = "1.10.0"

# logger
tracing = "0.1"
tracing-subscriber = "0.2"

[workspace]
members = [
    'quake_core',
    'quake_gui',
    'quake_tui',
    'quake_importer',
    'quake_analysis'
]
