[package]
name = "quake"
version = "0.5.0"
edition = "2018"
authors = ["Inherd Group <quake@inherd.org>"]
description = """
Simple knowledge management tool for geek.
"""
documentation = "https://github.com/phodal/quake"
repository = "https://github.com/phodal/quake"
readme = "README.md"
license = "MIT"
exclude = ["_fixtures/*"]
autoexamples = true
keywords = ["knowledge", "dashboard"]

[dependencies]
quake_core = { path = "quake_core", version = "0.5.0" }
quake_tui = { path = "quake_tui", version = "0.5.0" }
quake_gui = { path = "quake_gui" }
quake_processor = { path = "libs/quake_processor", version = "0.4.0" }

# cli parser
clap = { version = "3.0.0-beta.5", features = ["derive"] }
config = { version = "0.11", features = ["yaml"] }

regex = "1.0"
lazy_static = "1.4.0"

# https://crates.io/crates/grep-regex
grep-regex = "0.1.9"
grep-searcher = "0.1.8"

csv = "1.1"

walkdir = "2"

# time convert
chrono = "0.4"

# Termnial ui
comfy-table = "4.1.1"

serde_yaml = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# for csv to json
json = "0.12.4"

# Search Engine
#meilisearch-sdk = "0.12.0"
futures = "0.3" # To be able to block on async functions if you are not using an async runtime

# WebServer
figment = { version = "0.10", features = ["toml", "env", "yaml"] }
reqwest = { version = "0.11.6", features = ["blocking", "json"] }

rocket = { version = "0.5.0-rc.1", features = ["json"] }
# file upload
rocket-multipart-form-data = "0.10.0"

# notify for dir
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.13"

# for testing
async-std = "1.10.0"

# logger
tracing = "0.1"
tracing-subscriber = "0.2"

syntect = { version = "4.2", default-features = false, features = ["default-fancy"] }

zip = "0.5"

[workspace]
members = [
    'quake_core',
    'quake_gui',
    'quake_tui',
    'quake_wasm',
    'libs/quake_importer',
    'libs/quake_processor'
]
