[package]
name = "quake"
version = "0.5.1"
edition = "2018"
authors = ["Inherd Group <quake@inherd.org>"]
description = """
Simple knowledge management tool for geek.
"""
documentation = "https://github.com/phodal/quake"
repository = "https://github.com/phodal/quake"
readme = "README.md"
license = "MIT"
exclude = ["_fixtures/*"]
autoexamples = true
keywords = ["knowledge", "dashboard"]

[dependencies]
quake_core = { path = "quake_core", version = "0.5.0" }
quake_tui = { path = "quake_tui", version = "0.5.0" }
#quake_gui = { path = "quake_gui" }
quake_processor = { path = "libs/quake_processor", version = "0.4.0" }

webbrowser = "0.8.0"

# cli parser
clap = { version = "4.0.18", features = ["derive"] }
config = { version = "0.13.2", features = ["yaml"] }

regex = "1.0"
lazy_static = "1.4.0"

# https://crates.io/crates/grep-regex
grep-regex = "0.1.9"
grep-searcher = "0.1.8"

csv = "1.1"

walkdir = "2"

# time convert
chrono = "0.4"

# Termnial ui
comfy-table = "6.1.1"

serde_yaml = "0.9.14"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# for csv to json
json = "0.12.4"

# Search Engine
#meilisearch-sdk = "0.12.0"
futures = "0.3" # To be able to block on async functions if you are not using an async runtime

# WebServer
figment = { version = "0.10", features = ["toml", "env", "yaml"] }
reqwest = { version = "0.11.6", features = ["blocking", "json"] }

rocket = { version = "0.5.0-rc.2", features = ["json"] }
# file upload
rocket-multipart-form-data = "0.10.0"

# notify for dir
crossbeam-channel = "0.5.6"
notify = "5.0.0"

# for testing
async-std = { version = "1", features = ["attributes", "tokio1"] }

# logger
tracing = "0.1"
tracing-subscriber = "0.3.16"

syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }

zip = "0.6.3"

[workspace]
members = [
    'quake_core',
    'quake_log',
    'quake_gui',
    'quake_gui/src-tauri',

    'quake_tui',
    'quake_wasm',
    'libs/quake_importer',
    'libs/quake_processor'
]
