[package]
name = "quake_analysis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quake_core = { path = "../quake_core", version = "0.3.0" }

jieba-rs = { version = "0.6", features = ["tfidf", "textrank"] }

walkdir = "2"
