[package]
name = "quake_core"
version = "0.1.0"
edition = "2018"
authors = ["Phodal HUANG <h@phodal.com>"]
description = """
Simple knowledge management tool for geek.
"""
documentation = "https://github.com/phodal/quake"
repository = "https://github.com/phodal/quake"
readme = "README.md"
license = "MIT"
exclude = ["_fixtures/*"]
autoexamples = true
keywords = ["knowledge", "dashboard"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

regex = "1"

lazy_static = "1.4.0"
