[package]
name = "quake_gui"
version = "0.1.0"
edition = "2018"
authors = ["Inherd Group <quake@inherd.org>"]
description = """
Simple knowledge management tool for geek.
"""
documentation = "https://github.com/phodal/quake"
repository = "https://github.com/phodal/quake"
readme = "README.md"
license = "MIT"
exclude = ["_fixtures/*"]
autoexamples = true
keywords = ["knowledge", "dashboard"]

[dependencies]
