[package]
name = "quake_importer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quake_core = { path = "../quake_core", version = "0.3.0" }

clap = "3.0.0-beta.5"

quake_microsoft_todo = "0.1.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]

