[package]
name = "quake_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.8", features = ["sqlite"]}
diesel_derives = {version = "1.4.1", features = ["sqlite"]}
diesel_migrations = {version = "1.4.0", features = ["sqlite"]}

dotenv = "0.15"

#r2d2 = "0.8.9"
#r2d2_sqlite = "0.19.0"

libsqlite3-sys = {version = "0.22.2", features = ["bundled"]}

#[dependencies.rusqlite]
#version = "0.26.0"
#features = ["bundled"]
