[package]
name = "quake_tui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quake_core = { path = "../quake_core", version = "0.1.0" }

crossterm = "0.22"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
unicode-width = "0.1.9"
serde_yaml = "0.8"
