[package]
name = "quake_tui"
version = "0.3.0"
edition = "2018"
authors = ["Inherd Group <quake@inherd.org>"]
description = """
Simple knowledge management tool for geek.
"""
documentation = "https://github.com/phodal/quake"
repository = "https://github.com/phodal/quake"
readme = "README.md"
license = "MIT"
exclude = ["_fixtures/*"]
autoexamples = true
keywords = ["knowledge", "dashboard"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quake_core = { path = "../quake_core", version = "0.3.0" }

crossterm = "0.22"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
unicode-width = "0.1.9"
serde_yaml = "0.8"

[dev-dependencies]
rstest = "0.12.0"
