[package]
name = "quake_processor"
version = "0.4.0"
edition = "2018"
authors = ["Phodal HUANG <h@phodal.com>"]
description = """
Simple knowledge management tool for geek.
"""
documentation = "https://github.com/phodal/quake"
repository = "https://github.com/phodal/quake"
readme = "README.md"
license = "MIT"
exclude = ["_fixtures/*"]
autoexamples = true
keywords = ["knowledge", "dashboard"]

[dependencies]
pdf-extract = "0.6.3"
lopdf = "0.26"
